assets/css/main.css
:root {
  --radius-large: 24px;
}


html {
    height: -webkit-fill-available; /* replace with stretch when standardized */
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    min-height: -webkit-fill-available; /* replace with stretch when standardized */
    font-family: Noto, sans-serif;
    line-height: 1.5;
    letter-spacing: 0.009375rem;
    background-color: #f6fafe;
    color: #241f31;
    margin: 0;
    padding: 0;
    overflow-y: scroll;
}

a {
    color: #1a5fb4;
    text-decoration: underline;
}

a:visited {
    color: #613583;
}

footer a, footer a:visited {
    color: #616161; /* grey500 */
}

footer img {
    width: 60px;
    height: auto;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

h1 a, h1 a:visited, h2 a, h2 a:visited, h3 a, h3 a:visited, h4 a, h4 a:visited, h5 a, h5 a:visited, h6 a, h6 a:visited {
    color: #241f31;
}

h1 {
    /* Display small */
    font-size: 2.25rem;
    line-height: 2.75rem;
    letter-spacing: 0;
}

h2 {
    /* Headline small */
    font-size: 1.5rem;
    line-height: 2rem;
    letter-spacing: 0;
}

h3 {
    /* Title large */
    font-size: 1.375rem;
    line-height: 1.75rem;
    letter-spacing: 0;
}

h4 {
    /* Title medium */
    font-size: 1rem;
    line-height: 1.5rem;
    letter-spacing: 0.009375rem;
}

h5 {
    /* Title small */
    font-size: 0.875rem;
    line-height: 1.25rem;
    letter-spacing: 0.00625rem;
}

h6 {
    /* Label small */
    font-size: 0.6875rem;
    line-height: 1rem;
    letter-spacing: 0.03125rem;
}

em {
    font-weight: bold;
}

code, pre {
    background-color: #e0e2ec; /* surface-variant */
    color: #44474e; /* on-surface-variant */
    font-family: "Noto Mono", monospace;
    font-size: 0.875rem; /* body-medium.size */
    letter-spacing: 0.015625rem; /* body-medium.tracking */
    line-height: 1.25rem; /* body-medium.line-height */
}

pre {
    border-radius: 12px;
    border: 1px solid #74777f /* outline */;
    overflow-x: auto;
    padding: 0.875rem;
}

code {
    border-radius: 8px;
    padding: 0 2px;
}

var {
    color: #a51d2d;
}

.coin-address {
    display: block;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.coin-address img {
    image-rendering: pixelated;
    width: 180px;
    height: 180px;
    border-radius: 16px;
}

#secureblue a {
    text-decoration: none;
}

#site-menu ul li a {
    color: #fff;
    display: flex;
    text-decoration: none;
    padding: 1em;
    align-items: center;
}

#secureblue a:hover {
    text-decoration: underline;
}

main {
    margin-left: auto;
    margin-right: auto;
    padding: 1em;
    max-width: 832px;
    min-width: 0;
    width: 100%;
    box-sizing: border-box;
    overflow-wrap: break-word;
}

main img {
    max-width: 100%;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

ul ul {
    padding-left: 20px;
}

footer {
    position: fixed;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 0.5em 1em;
    text-align: center;
    overflow-wrap: break-word;
    background: #222;
    border-top-left-radius: var(--radius-large);
    border-top-right-radius: var(--radius-large);
}

#footer-columns {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#footer-columns ul {
    padding: 0;
}

#pfp-layout {
    display: flex;
    text-align: left;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    list-style: none;
}

#pfp-layout li {
    display: block;
    padding: 0 0.5em;
}

.footer-row {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    display: block;
}

.footer-row li {
    display: inline-block;
    padding: 0 0.5em;
}

.footer-column {
    text-align: left;
}

.footer-column li {
    display: block;
    padding: 0 0.5em;
}

#site-menu ul {
    display: flex;
    flex-wrap: nowrap;
    overflow-x: auto;
    margin: 0;
    padding: 0;
}

#site-menu {
    background-color: #241f31;
    white-space: nowrap;
}

#site-menu ul li {
    list-style-type: none;
    display: flex;
}

#site-menu ul li:hover {
    background-color: #343147;
}


#site-menu ul li a:visited {
    color: #fff;
}

#site-menu ul li[aria-current] a {
    color: #76c9f6;
}

#site-menu ul li[aria-current]:hover a {
    color: #aedff9;
}

#site-menu img {
    height: 1.8rem;
    width: 1.8rem;
    vertical-align: middle;
    margin-right: 0.5rem;
}

#site-menu ul li img {
    filter: grayscale(1);
}

#site-menu ul li[aria-current] img {
    filter: none;
}

button, select, option, input, select, textarea {
    font-family: inherit;
}

button, select, .button, .button:visited {
    color: white;
    font-size: 0.95rem;
    font-weight: 600;
    letter-spacing: 0.009375rem;
    background-color: #0b7bb7;
    border-radius: 100px;
    border: none;
    padding: 16px 24px;
    margin: 0.25rem;
    cursor: pointer;
}

select {
    appearance: none;
    background-image: url("/assets/arrow-drop-down-light.svg");
    background-position: right 12px center;
    background-repeat: no-repeat;
    background-size: 24px 24px;
    padding-right: 40px;
}

.select-group {
    display: flex;
    flex-wrap: wrap;
}

.select-group > div {
    flex: 1;
    flex-grow: 0;
    min-width: 250px;
}

button:hover, select:hover, .button:hover {
    background-color: #086ba1;
}

button:focus, select:focus, .button:focus {
    background-color: #075e8d; /* button pressed on Android */
    box-shadow: inset 0 2px 4px -1px rgba(0 0 0 / 20%), inset 0 4px 5px 0 rgba(0 0 0 / 14%), inset 0 1px 10px 0 rgba(0 0 0 / 12%);
}

button:disabled, select:disabled {
    background-color: rgb(26 27 30 / 12%);
    color: rgb(26 27 30 / 38%);
    cursor: not-allowed;
}

.button, .button:visited, .button:hover, .button:active {
    text-decoration: none;
    padding-top: 16px;
    padding-bottom: 16px;
    line-height: 3.8rem;
}

.error-text {
    /* Baseline Material error color */
    color: #b00020;
}
/* ... */

